Ench: [Features] Some running features improvments

--- a/static/default/css/partials/feature.css
+++ b/static/default/css/partials/feature.css
@@ -8,13 +8,13 @@
 
 .p-feature-title {width:50%}
 .p-feature-last_run {width:20%}
-.p-feature-control {width:6%}
+.p-feature-control {width:5%}
 
 .p-feature-title {border-left-width:5px; border-left-style:solid; padding-left:10px}
 .p-feature-list td {vertical-align:top; padding:5px 5px 5px 10px}
 .p-feature-list-edit {font-size:80%; color:#a0a0a0; margin-left:2px}
 .p-feature-list-delete {font-size:80%; color:#FF7A7A; margin-left:2px}
-.p-feature-control a {font-size:150%; text-decoration:none}
+.p-feature-control a {font-size:140%; text-decoration:none}
 
 .pause-feature {
   writing-mode:tb-rl;
@@ -26,4 +26,4 @@
 .ok td {border-left-color:#2C6E07; background:#C3FAAF}
 .failed td {border-left-color:#EB3636; background:#FA8E8E}
 .paused td {border-left-color:#C0C0C0; background:#f0f0f0}
-.wait_for_run td {border-left-color:#6BDCFF; background:#E5F9FF}
+.waiting td {border-left-color:#6BDCFF; background:#E5F9FF}
